tests/typing/fail/emptystorage/circular.act
contract LValue

constructor()

creates

    uint x := y
    uint y := x
    uint z := x
